# PlantCareTracker

./: .gitignore  .replit  Readme.md  app.py  forms.py  models.py  pyproject.toml  replit.md  requirements.txt
static/css/: style.css
templates/: add_journal_entry.html  add_plant.html  base.html  dashboard.html  edit_plant.html  landing.html  login.html  plant_detail.html  register.html
